fix vendor paths

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="user-scalable=no, width=device-width">
 		<link rel="stylesheet" href="css/style.css" type="text/css"/>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="js/fileUtility.js"></script>
-		<script src="js/jquery.uploadify.js"></script>
+		<script src="fileUtility.js"></script>
+		<script src="jquery.uploadify.js"></script>
  	</head>
  	
 	<body>
